# melted-adw

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: implementation.md  plan.md  prime.md
specs/config-implementation/: implementation-plan.md
specs/engine-implementation/: implementation-plan.md
specs/provider-implementation/: analysis-report.md  detailed-implementation-plan.md  implementation-plan.md  integration-report.md
src/: cli.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  provider.rs
src/config/: dto.rs  step.rs  workflow.rs
src/engine/: context.rs  executor.rs  result.rs
src/provider/: anthropic.rs  model_tier.rs  openai.rs  traits.rs
tests/: workflow_integration_test.rs
workflows/: example.toml
